--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <meta charset="utf-8">
 </head>
 <body>
-    <h1>영밥이</h1>
+    <h1><a href="https://blog.naver.com/dudwlsvldzm" target="_blank" title="영밥이 블로그로 오슈">영밥이</a></h1>
+    <p><iframe width="1006" height="663" src="https://www.youtube.com/embed/FBgK0kmL_ok" title="[궁 OST] Perhaps Love 사랑인가요" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 <ol>
  <li> 뀨잉</li>
  <li> 시작하는글</li>
@@ -15,4 +16,26 @@
  <li> 코딩 study </li>
 </ol>
 <h2>바비영밥이 서재</h2>
-끄르르를
+<p>
+    <div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://web-1-p3i3sruhf2.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</p>
+</body>
+</html>
