--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1><a href="https://blog.naver.com/dudwlsvldzm" target="_blank" title="영밥이 블로그로 오슈">영밥이</a></h1>
-    <p><iframe width="1006" height="663" src="https://www.youtube.com/embed/FBgK0kmL_ok" title="[궁 OST] Perhaps Love 사랑인가요" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+    <p><iframe width="1170" height="658" src="https://www.youtube.com/embed/fL6rM4hTFJA" title="동생이 다이어트 한다고 해서 만든 노래" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 <ol>
  <li> 뀨잉</li>
  <li> 시작하는글</li>
