댓글+채팅 기능 추가

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta charset="utf-8">
 </head>
 <body>
-    <h1><a href="https://blog.naver.com/dudwlsvldzm" target="_blank" title="영밥이 블로그로 오슈">영밥이</a></h1>
+    <h1>영밥이</h1>
     <p><iframe width="1170" height="658" src="https://www.youtube.com/embed/fL6rM4hTFJA" title="동생이 다이어트 한다고 해서 만든 노래" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 <ol>
  <li> 뀨잉</li>
