자기소개 웹페이지 링크 추가

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>영밥이</h1>
     <p><iframe width="1170" height="658" src="https://www.youtube.com/embed/fL6rM4hTFJA" title="동생이 다이어트 한다고 해서 만든 노래" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 <ol>
- <li> 뀨잉</li>
+ <li><a href="file:///C:/Users/truew/Desktop/%EC%9B%B9%EA%B3%B5%EB%B6%80/%EC%83%9D%ED%99%9C%EC%BD%94%EB%94%A9_%EC%8B%A4%EC%8A%B5/%EC%9E%90%EA%B8%B0%EC%86%8C%EA%B0%9C.html"> 자기소개</a></li>
  <li> 시작하는글</li>
  <li> 기타 초보</li>
  <li> 코딩 study </li>
