내 velog로 전환 및 수정

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <title>
-    영밥이의 서재에 오신걸 환영쓰
+    wortyjyj's Velog
 </title>
 <meta charset="utf-8">
 </head>
 <body>
-    <h1>영밥이</h1>
+    <h1>wortyjyj's Velog</h1>
     <input type="button" value="밤에는 이걸 눌러서 눈보호하세여" onclick="
     var target = document.querySelector('body'); //onclick은 사용자와 상호작용하는 자바스크립트 언어. 그렇기 때문에 HTML의 태그를 가져오려면 querySelector가 필요함
     if(this.value === '밤에는 이걸 눌러서 눈보호하세여'){
@@ -22,14 +22,13 @@
     }
     "
     >
-    <p><iframe width="1170" height="658" src="https://www.youtube.com/embed/fL6rM4hTFJA" title="동생이 다이어트 한다고 해서 만든 노래" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-<ol>
- <li><a href="자기소개.html" target="_blank"> 자기소개</a></li>
- <li> 시작하는글</li>
- <li> 기타 초보</li>
- <li> 코딩 study </li>
-</ol>
-<h2>바비영밥이 서재</h2>
+<div>
+ <ul><a href="자기소개.html" target="_blank">자기소개</a></ul>
+ <ul> <<<미니프로젝트>>> </ul>
+ <ul><a href="#">  준비중 </a></ul>
+ <ul> 코딩 study </ul>
+ </div>
+<h2>개발 기록</h2>
 <p>
     <div id="disqus_thread"></div>
 <script>
