--- a/자기소개.html
+++ b/자기소개.html
@@ -1,48 +1,16 @@
-<table
-border = "1"
-width = "50%"
-height = "200"
-cellspacing = "5">
-    <thead>
-    <tr>
-        <th colspan="2">자기소개하기</th>
-    </tr>
-    </thead>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>적극적인 자기 PR 좀 할게요</title>
+</head>
+<body>
+    <header>
+         <h2>'나'라는 개발자는...</h2>
+         이해가되어야 일을 수행하는.. 느리지만 책임감을 가지고 담당 업무를 끝까지 해내는..?  
 
-    <tbody>
-        <tr>
-            <th>이름</th>
-            <td>
-                <align="center">
-                <input type="text" placeholder="">
-            </align>
-            </td>
-        </tr>
-        <tr>
-            <th>나이</th>
-            <th> 
-            <select name="나이">
-                <option>2022</option>
-                <option>늙은이</option>
-            </select> 
-            </th>
-        </tr>
-        <tr>
-            <th>성별</th>
-            <th>
-                <input type="radio" name="1" value="남자">남자
-                <input type="radio" name="1" value="여자">여자
-            </th>
-        </tr>
-        <tr>
-            <th colspan="2"> 
-                <form action="2">
-                    <input type="button" 
-                            value="자기소개 해주세여"
-                            style="font-size: 130%"
-                            onclick="alert('안녕하세여 제 이름은 어쩌구입니다')">
-                </form>
-            </th>
-        </tr>
-    </tbody>
-</table>
+    </header>
+</body>
+</html>
